modules/gdscript/tests/scripts/analyzer/errors/override_with_weaker_type.gd
class Parent:
	func override_me() -> bool:
		return true

class Child extends Parent:
	func override_me():
		pass
